# claude-usage-review

./: .gitignore  CLAUDE.md  README.md  SPEC.md  claudeusage.sh  electron-cross-platform-ai-usage-monitor-interview.md  multi-provider-cli-usage-monitor-interview.md  provider-telemetry-endpoints-interview.md  sync.md
ClaudeUsage/: AppDelegate.swift  ClaudeUsageApp.swift  Info.plist
ClaudeUsage.xcodeproj/: project.pbxproj
ClaudeUsage/Models/: CodexTypes.swift  ContributionData.swift  (+9 more)
ClaudeUsageTests/: ClaudeUsageTests.swift  CodexAdapterTests.swift  CodexWrapperTests.swift  DiagnosticsTests.swift  GeminiAdapterTests.swift  GeminiWrapperTests.swift  ProviderTelemetryContractTests.swift
docs/: cross-platform-parity.md
electron-app/: README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.preload.config.ts
research/: icp-search-log.md  icp.md
specs/: electron-cross-platform-ai-usage-monitor.md  multi-provider-cli-usage-monitor.md  provider-telemetry-endpoints.md
tasks/: history.md  ideas.md  manual-todo.md  record-todo.md  recurring-todo.md  roadmap.md  todo.md
tauri-app/: README.md  index.html  overlay.html  package-lock.json  package.json  settings.html  setup-windows.ps1  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/permissions/: default.toml
tauri-app/src-tauri/src/: api.rs  commands.rs  config.rs  credentials.rs  lib.rs  models.rs  overlay.rs  provider_types.rs  state.rs
(+154 files in other folders)
